--- a/jaxb-ri/bundles/runtime/pom.xml
+++ b/jaxb-ri/bundles/runtime/pom.xml
@@ -223,16 +223,29 @@
                         </configuration>
                     </execution>
                     <execution>
-                        <id>prepare-endorsed</id>
+                        <id>prepare-module-path</id>
                         <phase>validate</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
                         <configuration>
                             <skip>${maven.endorsed.skip}</skip>
-                            <outputDirectory>${endorsed.dir}</outputDirectory>
+                            <outputDirectory>${module.path}</outputDirectory>
                             <silent>false</silent>
-                            <includeArtifactIds>jaxb-api,txw2,istack-commons-runtime,stax-ex,FastInfoset</includeArtifactIds>
+                            <includeArtifactIds>txw2,istack-commons-runtime,stax-ex,FastInfoset</includeArtifactIds>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>prepare-upgrade-module-path</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${maven.endorsed.skip}</skip>
+                            <outputDirectory>${module.path}/api</outputDirectory>
+                            <silent>false</silent>
+                            <includeArtifactIds>jaxb-api</includeArtifactIds>
                         </configuration>
                     </execution>
                 </executions>
@@ -246,7 +259,7 @@
                         <additionalJOption>--add-modules</additionalJOption>
                         <additionalJOption>java.xml.bind</additionalJOption>
                         <additionalJOption>--module-path</additionalJOption>
-                        <additionalJOption>${endorsed.dir}</additionalJOption>
+                        <additionalJOption>${module.path}</additionalJOption>
                     </additionalJOptions>
                 </configuration>
             </plugin>
