--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -236,7 +236,8 @@
                     <forkCount>1</forkCount>
                     <reuseForks>true</reuseForks>
                     <argLine>
-                        --upgrade-module-path ${endorsed.dir}
+                        --module-path ${module.path}
+                        --upgrade-module-path ${module.path}/api
                         -Djdk.attach.allowAttachSelf
                     </argLine>
                 </configuration>
