--- a/jaxb-ri/pom.xml
+++ b/jaxb-ri/pom.xml
@@ -165,13 +165,14 @@
         <findbugs.version>3.0.1</findbugs.version>
         <skipSources>true</skipSources>
         <skipOsgiTests>true</skipOsgiTests>
-        <netbeans.hint.jdkPlatform>JDK_1.7</netbeans.hint.jdkPlatform>
+        <netbeans.hint.jdkPlatform>JDK_9</netbeans.hint.jdkPlatform>
         <felix.junit4osgi>1.0.0</felix.junit4osgi>
         <felix.osgi.core>1.4.0</felix.osgi.core>
         <jmockit.version>1.34</jmockit.version>
         <copyright.template.file>tools/config/copyright.txt</copyright.template.file>
         <copyright.exclude.file>tools/config/copyright-exclude</copyright.exclude.file>
         <mrjar.sourceDirectory>${project.basedir}/src/main/java-mr</mrjar.sourceDirectory>
+        <base.java.level>1.7</base.java.level>
     </properties>
 
     <dependencyManagement>
@@ -594,6 +595,8 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
+                            <source>${base.java.level}</source>
+                            <target>${base.java.level}</target>
                             <excludes>
                                 <exclude>module-info.java</exclude>
                             </excludes>
