--- a/jaxb-ri/jxc/pom.xml
+++ b/jaxb-ri/jxc/pom.xml
@@ -207,8 +207,7 @@
                     <execution>
                         <id>default-compile</id>
                         <configuration>
-                            <source>9</source>
-                            <target>9</target>
+                            <release>${upper.java.level}</release>
                             <includes>
                                 <include>module-info.java</include>
                             </includes>
@@ -220,8 +219,9 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
-                            <source>${base.java.level}</source>
-                            <target>${base.java.level}</target>
+                            <!-- TODO find how to include tools.jar on classpath and replace with "release" -->
+                            <source>1.7</source>
+                            <target>1.7</target>
                             <excludes>
                                 <exclude>module-info.java</exclude>
                             </excludes>
@@ -279,19 +279,25 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.8</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.ant</groupId>
+                        <artifactId>ant</artifactId>
+                        <version>${ant.version}</version>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
                         <id>compile-java9</id>
                         <phase>compile</phase>
                         <configuration>
                             <tasks>
-                                <mkdir dir="${project.build.outputDirectory}/META-INF/versions/9" />
+                                <mkdir dir="${project.build.outputDirectory}/META-INF/versions/${upper.java.level}" />
                                 <javac srcdir="${mrjar.sourceDirectory}"
-                                       destdir="${project.build.outputDirectory}/META-INF/versions/9"
+                                       destdir="${project.build.outputDirectory}/META-INF/versions/${upper.java.level}"
                                        classpath="${project.build.outputDirectory}"
                                        includeantruntime="false"
-                                       source="9"
-                                       target="9">
+                                       release="${upper.java.level}">
                                     <compilerarg line="--module-path ${project.build.directory}/mods" />
                                     <compilerarg line="--add-modules ant,com.sun.istack.tools,com.sun.tools.xjc" />
                                     <compilerarg line="--add-reads com.sun.istack.tools=ant" />
