--- a/jaxb-ri/tools/osgi_tests/osgi_extra/pom.xml
+++ b/jaxb-ri/tools/osgi_tests/osgi_extra/pom.xml
@@ -48,7 +48,7 @@
     <parent>
         <groupId>com.sun.xml.bind.mvn</groupId>
         <artifactId>osgi-tests</artifactId>
-        <version>2.3.1-SNAPSHOT</version>
+        <version>2.3.0-jaxb1-removed</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
